aiy-board-tweaks (0.2) UNRELEASED; urgency=medium

  * Add in a MAC address generation and storage script.

 -- AIY Projects <support-aiyprojects@google.com>  Fri, 04 Jan 2019 13:38:00 -0800

aiy-board-tweaks (0.1) animal; urgency=medium

  * Initial release.

 -- AIY Projects <support-aiyprojects@google.com>  Wed, 12 Sep 2018 16:14:00 -0800