@@ -3,9 +3,3 @@
 
 %:
 	dh $@ --with systemd
-
-override_dh_systemd_enable:
-	dh_systemd_enable --name=runonce
-
-override_dh_systemd_start:
-	dh_systemd_start --no-start
