@@ -1,13 +1,0 @@
-[Unit]
-Description=Scripts that should be run only once
-Before=basic.target network-pre.target
-After=sysinit.target local-fs.target
-DefaultDependencies=no
-
-[Service]
-Type=oneshot
-RemainAfterExit=yes
-ExecStart=/usr/sbin/runonce
-
-[Install]
-WantedBy=basic.target
