@@ -1,6 +1,7 @@
 aiy-board-tweaks (0.2) UNRELEASED; urgency=medium
 
   * Add in a MAC address generation and storage script.
+  * Migrate runonce into its own package.
 
  -- AIY Projects <support-aiyprojects@google.com>  Fri, 04 Jan 2019 13:38:00 -0800
 
